# mfe-toolbox-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
blitzy/documentation/: Input Prompt.md  Technical Specifications - 9622b6c546bc6d649fd9bf0a36a7fcd53872e04a.md  Technical Specifications - Updated - 9622b6c546bc6d649fd9bf0a36a7fcd53872e04a.md
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_static/: custom.css  mermaid.min.js
docs/_templates/: class.html  function.html  layout.html  module.html  page.html
docs/api/: core.rst  distributions.rst  index.rst  tests.rst  ui.rst  utils.rst
docs/examples/: bootstrap_methods.ipynb  cross_sectional_analysis.ipynb  getting_started.ipynb  gui_interface.ipynb  multivariate_volatility_models.ipynb  real_world_applications.ipynb  realized_volatility.ipynb  statistical_distributions.ipynb  statistical_tests.ipynb  time_series_analysis.ipynb  univariate_volatility_models.ipynb
docs/user_guide/: api_overview.rst  bootstrap_methods.rst  cross_sectional_analysis.rst  getting_started.rst  gui_interface.rst  high_frequency_econometrics.rst  index.rst  installation.rst  multivariate_volatility_models.rst  statistical_distributions.rst  statistical_tests.rst  time_series_analysis.rst  univariate_volatility_models.rst
mfe/: __init__.py  version.py
mfe/core/: __init__.py  base.py  config.py  exceptions.py  parameters.py  results.py  types.py  validation.py
mfe/models/: __init__.py
mfe/models/bootstrap/: __init__.py  _numba_core.py  base.py  block_bootstrap.py  bsds.py  mcs.py  stationary_bootstrap.py  utils.py
mfe/models/cross_section/: __init__.py  _numba_core.py  base.py  ols.py  pca.py  utils.py
mfe/models/distributions/: __init__.py  base.py  composite_likelihood.py  generalized_error.py  normal.py  skewed_t.py  student_t.py  utils.py
mfe/models/multivariate/: __init__.py  _numba_core.py  base.py  bekk.py  ccc.py  dcc.py  gogarch.py  matrix_garch.py  rarch.py  rcc.py  riskmetrics.py  scalar_vt_vech.py  utils.py
mfe/models/realized/: __init__.py  _numba_core.py  base.py  bipower_variation.py  compute_median.py  covariance.py  hayashi_yoshida.py  kernel.py  kernel_bandwidth.py  kernel_core.py  kernel_jitter_lag_length.py  kernel_weights.py  min_med_variance.py  multiscale_variance.py  multivariate_kernel.py  noise_estimate.py  options.py  preaveraged_bipower_variation.py  preaveraged_variance.py  price_filter.py  qmle_variance.py  quantile_variance.py  quarticity.py  range.py  refresh_time.py  refresh_time_bivariate.py  return_filter.py  seconds2unit.py  seconds2wall.py  semivariance.py  subsample.py  threshold_multipower_variation.py  threshold_variance.py  twoscale_variance.py  unit2seconds.py  unit2wall.py  utils.py  variance.py  variance_optimal_sampling.py  wall2seconds.py  (+1 more)
mfe/models/time_series/: __init__.py  _numba_core.py  arma.py  base.py  causality.py  correlation.py  diagnostics.py  estimation.py  filters.py  forecast.py  har.py  impulse_response.py  plots.py  unit_root.py  utils.py  var.py
mfe/models/univariate/: __init__.py  _core.py  agarch.py  aparch.py  base.py  egarch.py  figarch.py  garch.py  heavy.py  igarch.py  tarch.py  utils.py
mfe/ui/: __init__.py  about_dialog.py  armax_app.py  close_dialog.py  model_viewer.py  utils.py
mfe/ui/controllers/: __init__.py  about_dialog_controller.py  armax_controller.py  close_dialog_controller.py  model_viewer_controller.py
mfe/ui/models/: __init__.py  about_dialog_model.py  armax_model.py  (+2 more)
mfe/utils/: __init__.py  covariance.py  data_transformations.py  date_utils.py  differentiation.py  matrix_ops.py  misc.py
tests/: .coveragerc  __init__.py  conftest.py  pytest.ini  test_heavy.py  test_realized.py  test_statistical.py  test_time_series.py  test_utils.py
(+10 files in other folders)
